<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/option_background"
    tools:context=".WelcomeActivity">

    <Button
        android:id="@+id/btn_main_menu"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_button_main_menu"
        android:text="@string/str_MAIN_MENU"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txt_game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:fontFamily="@font/bungee_shade"
        android:text="@string/game_name"
        android:textColor="#322929"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_author_title"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/str_by_Zirui_Huang"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_game_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/animation_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/money1"
            android:layout_width="48dp"
            android:layout_height="39dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/panda_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/money2"
            android:layout_width="46dp"
            android:layout_height="40dp"
            android:layout_marginTop="44dp"
            android:src="@drawable/footprint"
            app:layout_constraintStart_toEndOf="@+id/money1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/money3"
            android:layout_width="48dp"
            android:layout_height="39dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/panda_profile"
            app:layout_constraintStart_toEndOf="@+id/money2"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/money4"
            android:layout_width="48dp"
            android:layout_height="39dp"
            android:layout_marginTop="44dp"
            android:src="@drawable/footprint"
            app:layout_constraintStart_toEndOf="@+id/money3"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/money5"
            android:layout_width="48dp"
            android:layout_height="39dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/panda_profile"
            app:layout_constraintStart_toEndOf="@+id/money4"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>